--- a/.github/workflows/onVersionTag.yml
+++ b/.github/workflows/onVersionTag.yml
@@ -1,13 +1,9 @@
-# This is a basic workflow to help you get started with Actions
-
 name: OnVersionTag
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
-  create:
+  push:
     tags:
-      - 'v*'
+      - v*
 jobs:
   windows:
     
@@ -22,8 +18,6 @@ jobs:
       
     steps:
     - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
